Final clean project structure

--- a/notebooks/Task1 python.ipynb
+++ b/notebooks/Task1 python.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3e52dd84-acec-4363-ad1b-70af7a7b5857",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Largest: 4\n"
+     ]
+    }
+   ],
    "source": [
     "a = int(input(\"Enter first number: \"))\n",
     "b = int(input(\"Enter second number: \"))\n",
@@ -21,23 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "fc81dac2",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "year = int(input(\"Enter year: \"))\n",
-    "\n",
-    "if (year % 4 == 0 and year % 100 != 0) or (year % 400 == 0):\n",
-    "    print(\"Leap Year\")\n",
-    "else:\n",
-    "    print(\"Not a Leap Year\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c2e670e4",
-   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Leap Year\n"
+     ]
+    }
+   ],
    "source": [
     "year = int(input(\"Enter year: \"))\n",
     "\n",
@@ -49,10 +52,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "be84134c-ee9c-4e21-a44e-451684462b4b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Consonant\n"
+     ]
+    }
+   ],
    "source": [
     "ch = input(\"Enter a character: \").lower()\n",
     "\n",
@@ -64,10 +75,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b89feb0d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not divisible by both 5 and 11\n"
+     ]
+    }
+   ],
    "source": [
     "num = int(input(\"Enter number: \"))\n",
     "\n",
@@ -79,10 +98,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "55f081bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum: 15\n"
+     ]
+    }
+   ],
    "source": [
     "n = int(input(\"Enter N: \"))\n",
     "i = 1\n",
@@ -97,10 +124,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "636b5a07",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 x 1 = 4\n",
+      "4 x 2 = 8\n",
+      "4 x 3 = 12\n",
+      "4 x 4 = 16\n",
+      "4 x 5 = 20\n",
+      "4 x 6 = 24\n",
+      "4 x 7 = 28\n",
+      "4 x 8 = 32\n",
+      "4 x 9 = 36\n",
+      "4 x 10 = 40\n"
+     ]
+    }
+   ],
    "source": [
     "num = int(input(\"Enter number: \"))\n",
     "i = 1\n",
@@ -112,10 +156,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1c2ecd24",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   *\n",
+      "  ***\n",
+      " *****\n",
+      "*******\n"
+     ]
+    }
+   ],
    "source": [
     "rows = 4\n",
     "\n",
@@ -125,10 +180,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "20403f4c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "12\n",
+      "123\n",
+      "1234\n",
+      "12345\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(1, 6):\n",
     "    for j in range(1, i + 1):\n",
